# Clothoid-R_seminar

./: .gitignore  README.md  run_docker.sh  save_images.py
camera_ws/: best.pt
camera_ws/src/detect_msgs/: CMakeLists.txt  package.xml
camera_ws/src/detect_msgs/msg/: DetectedArray.msg  DetectedObject.msg  Objects.msg  YoloObjects.msg
camera_ws/src/lidar_camera_fusion/: package.xml  setup.cfg  setup.py
camera_ws/src/lidar_camera_fusion/lidar_camera_fusion/: __init__.py  fusion_node.py
camera_ws/src/yolo_detector_viewer/: package.xml  setup.cfg  setup.py
camera_ws/src/yolo_detector_viewer/resource/: yolo_detector_viewer
camera_ws/src/yolo_detector_viewer/yolo_detector_viewer/: detect_viewer.py  pruned_detect_viewer.py  yolo_publisher.py
utils/: save_images.py
yolov12/: dataset.yaml  split_dataset.py
yolov12/dataset/: data.yaml
yolov12/dataset/test/labels/: frame_0003_jpg.rf.3b5a8cd30e131fa70bd26b57dac67a79.txt  frame_0012_jpg.rf.7c1b50db7ef4df71525cd71f119f487c.txt  frame_0013_jpg.rf.fd9c6d1b9e21503e4d800199d7633aa0.txt  frame_0015_jpg.rf.08febbd401516a9111e73931c90f8ecf.txt  frame_0016_jpg.rf.c6cadcc89629aa7e9ee443e3a4d07e0f.txt  frame_0043_jpg.rf.470e943af609996b03eeb1038bb501fc.txt  (+27 more)
yolov12/dataset/train/: labels.cache
yolov12/dataset/val/: labels.cache
yolov12/yolov12/: detection_test.py  eval.py  pruning_finetuning.py  train_baseline_model.py  yolov12.yml
yolov12/yolov12/compress/: Compress.py  GM.py
yolov12/yolov12/pruned_yaml/: best.yaml
yolov12/yolov12/ultralytics.egg-info/: SOURCES.txt
yolov12/yolov12/utils/: prune.py
(+307 files in other folders)
